--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "react-router": "^4.2.0"
   },
   "devDependencies": {
+    "antd": "^2.13.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "react-hot-loader": "^3.1.1",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.0",
     "webpack-dev-server": "^2.9.2"
   }
