--- a/package.json
+++ b/package.json
@@ -1,34 +1,42 @@
 {
-  "name": "test",
+  "name": "weather-react",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run dev",
-    "dev": "webpack-dev-server",
-    "build": "webpack"
+    "start": "webpack-dev-server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router": "^4.2.0"
+    "html-webpack-plugin": "^2.30.1",
+    "moment": "^2.19.2",
+    "history/createHashHistory": "latest"
   },
   "devDependencies": {
-    "antd": "^2.13.6",
+    "antd": "^2.13.2",
+    "antd-mobile": "^2.0.3",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "react-hot-loader": "^3.1.1",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.0",
-    "webpack-dev-server": "^2.9.2"
+    "file-loader": "^0.11.2",
+    "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-hot-loader": "^1.3.1",
+    "react-router": "^4.2.0",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.8.2",
+    "history/createHashHistory": "latest"
   }
 }
